# sqlx-named-bind

./: .gitmodules  Cargo.toml  README.md
examples/: basic.rs  transaction.rs
src/: builder.rs  error.rs  lib.rs  query.rs  query_as.rs
