[package]
name = "sqlx-named-bind"
version = "0.1.0"
edition = "2021"
authors = ["Akira Kano <akira.kano1101@gmail.com>"]
description = "Named parameter binding for SQLx with HRTB pattern, avoiding self-referential issues"
license = "MIT OR Apache-2.0"
repository = "https://github.com/akirakano/sqlx-named-bind"
documentation = "https://docs.rs/sqlx-named-bind"
homepage = "https://github.com/akirakano/sqlx-named-bind"
keywords = ["sqlx", "database", "mysql", "named-parameters", "query-builder"]
categories = ["database"]
readme = "README.md"

[dependencies]
sqlx = { version = "0.8", default-features = false, features = ["mysql"] }
regex = "1.11"
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio"] }
dotenvy = "0.15"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "transaction"
path = "examples/transaction.rs"
